# SynapseMesh

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
app/: __init__.py  broker.py  config.py  database.py  detector.py  guard.py  locker.py  main.py  mesh.py  models.py  router.py
tests/: __init__.py  test_bus.py  test_mesh.py
