[project]
name = "synapse-mesh"
version = "0.1.0"
description = "Autonomous multi-model negotiation loop and semantic routing gateway."
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "SynapseMesh Maintainers" }
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pydantic-settings",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "aiosqlite",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "SIM", "RUF"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
